--- a/about.html
+++ b/about.html
@@ -5,15 +5,6 @@
    <link rel="stylesheet" type="text/css" href="styles/about.css">
 </head>
 <body>
-<header>
-  <ul class="topnav" id="myTopnav">
-  	<li><a href="contact.html">contact</a></li>
-  	<li><a href="blog.html">blog</a></li>
-  	<li><a href="about.html">about</a></li>
-  	<li><a href="index.html">home</a></li>
-    <a href="javascript:void(0)"></a></li>
-  </ul>
- </header>
 
  <div id="mission statement">
 <article>
@@ -24,23 +15,12 @@
  <article>
  <h2>Where we come from
  </h2>
-  <p>Food is more than just sustenance. Some dishes have deep cultural roots and their preparation have turned into long-standing traditions. Bratwurst, curry, pizza, and pho have long become epitomes of their countries of origin. <blockquote><span class="brand">tradish-dish</span> believes that recipes have been passed down from generation to generation for a  good reason. These dishes have become more than just food - these meals resemble friends and family and the moments you shared, tradition and culture, they evoke childhood memories soothing your homesickness or let you relive your exotic travel adventures, they mean good times, laughter, and comfort and above all, provide a way for us to connect with each other.</blockquote></p>
+  <p>Food is more than just sustenance. Some dishes have deep cultural roots and their preparation have turned into long-standing traditions. Bratwurst, curry, pizza, and phở have long become epitomes of their countries of origin. <blockquote><span class="brand">tradish-dish</span> believes that recipes have been passed down from generation to generation for a  good reason. These dishes have become more than just food – these meals resemble friends and family and the moments you shared, tradition and culture, they evoke childhood memories soothing your homesickness or let you relive your exotic travel adventures, they mean good times, laughter, and comfort and above all, provide a way for us to connect with each other.</blockquote></p>
   </article>
   <article>
  <h3>What we are all about
  </h3>
-  <p>Having lived in 10 countries on 3 continents, we discovered that the local food substantially contributed to the great memories made in each and every place. However, it was not just about the food but the stories that came with the dish, which allowed us to truly immerse ourselves in the different cultures and experience heartfelt hospitality. It is our aim to tease out from people their favorite recipes along with their stories from every corner of the world. We want to share these little gems with everyone who has an appreciation for traditional food (or newly invented traditions) and is keen to get an authentic insight into the local cuisines of the world.</p>
+  <p>Having lived in 10 countries on 3 continents, we discovered that the local food substantially contributed to the great memories made in each and every place. However, it was not just about the food but the stories that came with the dish, which allowed us to truly immerse ourselves in the different cultures and experience heartfelt hospitality. It is our aim to tease out people’s favorite recipes along with their stories from every corner of the world. We want to share these little gems with everyone who has an appreciation for traditional food (or newly invented traditions) and is keen to get an authentic insight into the world’s local cuisines.</p>
   </article>
-  <article>
- <h4>Who we are
- </h4>
-  <h5>Nadia</h5>
-   <h6>
-   <div id="image"><img height="20%" width="20%" img src="images/nadia.jpg"></div>
-   There is a higher probability of a meteorite falling in the middle of Cambridge, than me putting together a description of who I am. However, I will give it a try: I am a sister, adventurer, life-scientist, ballroom dancer, go-and-get-it, do-not-give-up, enjoy-every-moment, and most importantly food-defines-who-you-are. When I travel, I enjoy discovering people's lives through their love of food, experiences of life, or simply sharing their company on a rainy afternoon or a sunny morning.
-   </h6>
-   </article>
 
  </div>
- </body>
- </html>
