--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 </head>
 <body>
  <header>
-  <ul class="topnav" id="myTopnav">
-    <li><a href="contact.html">contact</a></li>
-    <li><a href="blog.html">blog</a></li>
-    <li><a href="about.html">about</a></li>
-    <li><a href="index.html">home</a></li>
-    <a href="javascript:void(0)"></a></li>
+  <ul>
+  	<li><a href="index.html">home</a></li>
+  	<li><a href="about.html">about</a></li>
+  	<li><a href="blog.html">blog</a></li>
+  	<li><a href="contact.html">contact</a></li>
   </ul>
  </header>
  <div id="intro">
@@ -20,13 +19,13 @@
   <h1>tradish-dish</h1>
  </article>
  <article>
-  <h2>Explore the favorite dishes from people around the world and let your taste buds indulge in what used to be some of the best-kept family secrets. Because food is more than just sustenance - it connects us.</h2>
+  <h2>Explore the favorite dishes from people around the world and let your taste buds indulge in what used to be some of the best-kept family secrets. Because food is more than just sustenance – it connects us.</h2>
  </article>
  </div>
 
  <div id="image">
 
-  <img src="images/Worldmap.png">
+  <img src="images/Worldmap.png"
  
  </div>
 
