--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 		contact us
 		</h1>
 		<h2>
-			an online form for people to submit their recipes
+			Say hi and share your very own tradish dish!
 		</h2>
 	</body>
 </html>
