--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
  <header>
   <ul>
-  	<li><a href="index.html">home</a></li>
-  	<li><a href="about.html">about</a></li>
-  	<li><a href="blog.html">blog</a></li>
   	<li><a href="contact.html">contact</a></li>
+  	<li><a href="blog.html">blog</a></li>
+  	<li><a href="about.html">about</a></li>
+  	<li><a href="index.html">home</a></li>
   </ul>
  </header>
  <div id="intro">
@@ -25,11 +25,14 @@
 
  <div id="image">
 
-  <img src="images/Worldmap.png"
- 
- </div>
-
+<img src="images/Worldmap.png" border="0" width="720" height="540" orgWidth="720" orgHeight="540" usemap="#image-maps-2017-03-14-122706" alt="worldmap" />
+<map name="image-maps-2017-03-14-122706" id="ImageMapsCom-image-maps-2017-03-14-122706">
+<area shape="rect" coords="718,538,720,540" alt="Image Map" style="outline:none;" title="Image Map" href="europe.html" />
+<area  alt="" title="" href="europe.html" shape="poly" coords="360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175,360,175" style="outline:none;" target="_self"     />
+<area  alt="" title="" href="europe.html" shape="poly" coords="361,138,347,141,335,149,327,161,324,175,327,189,335,201,347,209,361,212,375,209,387,201,395,189,398,175,395,161,387,149,375,141" style="outline:none;" target="_self"     />
+</map>
  <body alink="#00ff00">
+ </div>
 
  <div>
 
